Fixed a Heisenbug with NodeListImpl that caused it to break metacompilation by failing to pop a permission policy manager when an error occurred during filtering.